# mathematics-and-algorithms

./: CHANGELOG.md  LICENSE  README.md  mathematics-and-algorithms.cabal
app/: Main.hs
lib/: ChineseRemainder.hs  ExtendedEuclidean.hs  ModularArithmetic.hs  NumericalOptimization.hs  Sam.hs  SquareAndMultiply.hs
lib/modularArithmetic/: ExtendedEuclidean.hs  ModularInverse.hs  RSA.hs
lib/numericalOptimization/: GradientDescent.hs  NewtonRaphsonMethod.hs
test/: AssertHelpers.hs  ChineseRemainderTest.hs  ExtendedEuclideanTest.hs  ModularInverseTest.hs  NewtonRaphsonTest.hs  SamTest.hs  SquareAndMultiplyTest.hs  Test.hs
