cabal-version:      3.0

name:               mathematics-and-algorithms
version:            0.1.0.0
synopsis:           Mathematics and Algorithms implemented with Haskell

license:            MIT
license-file:       LICENSE

author:             Eldar Omerovic
maintainer:         eldaromerovic@proton.me
category:           Math

extra-source-files:
    CHANGELOG.md
    README.md

library
    default-language: Haskell2010
    hs-source-dirs:   lib
    exposed-modules:  SquareAndMultiply,
                      ExtendedEuclidean,
                      ModularInverse,
                      ChineseRemainder
    build-depends:    base ^>=4.17.2.0

executable maa
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        mathematics-and-algorithms

executable test
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    
        base ^>=4.17.2.0,
        HUnit,
        mathematics-and-algorithms
